# SABGL

./: README.md  run_wnn_2018_train.py  run_wnn_baidu_train.py
datasets/runs/: coords-2012-2014-ensemble-15-15.txt  coords-2012-2014-ensemble2-1-1.txt  coords-2012-2014-ensemble2-5-5.txt  coords-2012-2014-vgram-10-10.txt  output-2012-2014-ensemble-1-1.txt  output-2012-2014-ensemble-10-10.txt  output-2012-2014-ensemble-15-15.txt  (+26 more)
pyram/: CMakeLists.txt  dtw.py  readme.txt  run_wnn_2018_train.py
pyram/mae/: CMakeLists.txt  requirements.txt  setup.py  setup.py.in
pyram/mae/examples/: coords.txt  example_character.py  example_character_config.py  example_facerecog.py  example_facerecog_config.py  example_placerecog.py  example_placerecog2.py  example_placerecog_baidu.py  example_placerecog_config.py  example_placerecog_dtw.py  example_placerecog_dtw2.py  example_placerecog_plot.py  example_placerecog_run.py  example_placerecog_utils.py  example_trafficsign.py  example_trafficsign_config.py  output.txt  run_wnn_2018_train.py  run_wnn_baidu_train.py
pyram/mae/examples/.myenv/local/: bin
pyram/mae/examples/20201216/: coords-all-2019-ensemble2-5-1.txt  output-all-2019-ensemble-5-1.txt  output-all-2019-ensemble2-5-1.txt  output-all-2019-vgram-5-1.txt  plotar.txt  result-all-2019-ensemble-5-1.txt  result-all-2019-ensemble2-5-1.txt  result-all-2019-vgram-5-1.txt
pyram/mae/examples/myenv/local/: include  lib
pyram/mae/examples/result_2016_01_20/: output-ensemble-1-1.txt  output-ensemble-10-10.txt  output-ensemble-15-15.txt  output-ensemble-30-30.txt  output-ensemble-5-5.txt  output-ensemble2-1-1.txt  output-ensemble2-10-10.txt  output-ensemble2-15-15.txt  output-ensemble2-2-2.txt  output-ensemble2-30-30.txt  output-ensemble2-5-5.txt  output-vgram-1-1.txt  output-vgram-10-10.txt  output-vgram-15-15.txt  output-vgram-30-30.txt  output-vgram-5-5.txt  result-ensemble-1-1.txt  result-ensemble-10-10.txt  result-ensemble-15-15.txt  result-ensemble-5-5.txt  result-ensemble2-1-1.txt  result-ensemble2-10-10.txt  result-ensemble2-15-15.txt  result-ensemble2-2-2.txt  result-ensemble2-30-30.txt  result-ensemble2-5-5.txt  result-vgram-1-1.txt  result-vgram-10-10.txt  result-vgram-15-15.txt  result-vgram-30-30.txt  result-vgram-5-5.txt
pyram/mae/vgram/: ctypes_utils.py  vgram_core.py  vgram_image.py  vgram_output.py  vgram_synapse.py  vgram_wrapper.py
pyram/src/: CMakeLists.txt  Makefile  cmake_install.cmake  vgram  vgram.h  vgram_base.cpp  vgram_base.cu  vgram_base.cuh  vgram_base.h  vgram_data.cpp  vgram_error.cpp  vgram_error.h  vgram_files.cpp  vgram_files.h  vgram_main.cpp  vgram_output.cpp  vgram_output.h  vgram_synapse.cpp  vgram_test.cpp  vgram_test.cu  vgram_test_dtw.cpp  vgram_train.cpp  vgram_train.cu  vgram_utils.cpp  vgram_utils.h
